# propsbasket

./: .env.example  .gitignore  CLAUDE.md  README.md  analyze.py  docker-compose.yml  personal.txt  requirements.txt
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: orm.py
backend/app/routers/: predictions.py  props.py
backend/app/schemas/: props.py
backend/app/services/: predictor.py
backend/migrations/: env.py
frontend/: Dockerfile
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: RefreshButton.tsx  SummaryCards.tsx  TopEdgesTable.tsx
ml/: Dockerfile  pyproject.toml
ml/propsbasket/evaluation/: metrics.py
ml/propsbasket/features/: engineering.py
ml/propsbasket/ingestion/: nba_stats.py  odds.py
ml/propsbasket/models/: trainer.py
ml/propsbasket/prediction/: live.py
ml/scripts/: build_features.py  ingest_nba.py  predict_live.py  train.py
src/: formula.py  injuries.py  nba.py
